fix: improve attraction box alignment and responsiveness for middle sized device

--- a/static/styles.css
+++ b/static/styles.css
@@ -191,22 +191,29 @@ input::placeholder {
 .attractions{
   max-width:1200px;
   width:100%;
-  display:flex;
+  /* display:flex; */
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)); /* 卡片自適應 */
   gap:30px;
   padding: 15px;
   font-size: 16px;
-  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 .attractionCard{
-  width:270px;
-  height:242px;
+  max-width: 270px; 
+  width:100%;
+  aspect-ratio: 270 / 197; /* 保持寬高比例 */
   border: 1px solid #E8E8E8;
   border-radius:10px;
+  justify-content: center;
+  align-items: center;
 }
 .attractionImg {
   position: relative;
-  width: 268px;
-  height: 197px;
+  aspect-ratio: 268 / 197; /* 保持寬高比例 */
+  width: 100%;
+  height: 100%;
 }
 .attractionImg img {
   border-radius: 10px 10px 0 0;
@@ -249,10 +256,21 @@ input::placeholder {
   font-weight: bold;
 }
 
-@media (max-width: 830px) {
+@media (max-width: 1200px) {
   .attractions {
-    justify-content: center;
-    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .attractionCard{
+    max-width: 370px; 
+  }
+}
+
+@media (max-width: 830px) {
+  .attractions{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .attractionCard{
+    max-width: 385px; 
   }
 }
 
@@ -276,16 +294,9 @@ input::placeholder {
     width:320px;
   }
   .attractions {
-    flex-direction:column;
+    grid-template-columns: repeat(1, 1fr);
   }
   .attractionCard{
-    width:330px;
-    height:280px;
-    justify-content: center;
-    align-items: center;
-  }
-  .attractionImg {
-    width: 330px;
-    height: 235px; 
+    max-width:450px;
   }
 }
